test/files/neg/t5728.scala
object Test {

  implicit class Foo

  implicit def Foo = new Foo

}
